tests/ui/transmutability/dont-assume-err-is-yes-issue-126377.stderr
error[E0308]: mismatched types
  --> $DIR/dont-assume-err-is-yes-issue-126377.rs:13:23
   |
LL |     is_transmutable::<{}>();
   |                       ^^ expected `bool`, found `()`

error[E0277]: the trait bound `(): TransmuteFrom<(), { Assume::SAFETY }>` is not satisfied
  --> $DIR/dont-assume-err-is-yes-issue-126377.rs:13:23
   |
LL |     is_transmutable::<{}>();
   |                       ^^ the nightly-only, unstable trait `TransmuteFrom<(), { Assume::SAFETY }>` is not implemented for `()`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/dont-assume-err-is-yes-issue-126377.rs:8:9
   |
LL | pub fn is_transmutable<const ASSUME_ALIGNMENT: bool>()
   |        --------------- required by a bound in this function
LL | where
LL |     (): TransmuteFrom<(), { Assume::SAFETY }>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
